[build-system]
requires = [
	"setuptools>=54",
	"wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "PyMotifs"
version = "0.0.0"
authors = [{ name = "Antoine Silvestre de Sacy", email =  "antoinedesacy@gmail.com" }, { name = "Bruno Spilak", email = "bruno.spilak@gmail.com" }]
description = "For linguistic generation of idiosyncratic features, i.e. 'motifs'"
readme = "README.md"
license= { file = "LICENSE" }
classifiers = [
	"Programming Language :: Python :: 3",
	"Licence :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mypkg = ["*.txt"]

[project.optional-dependencies]
dev = ["black", "isort", "pytest", "pre-commit"]

[project.urls]
Homepage = "https://gitlab.huma-num.fr/adesacy/PyMotifs"

[project.scripts]

[tool.black]
line-length = 79
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.idea
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
