[metadata]
name = PyMotifs
version = 0.0.1
author = Antoine Silvestre de Sacy
author_email = antoinedesacy@gmail.com
description = For linguistic generation of idiosyncratic features, i.e. "motifs"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.huma-num.fr/adesacy/PyMotifs
classifiers = 
	Programming Language :: Python :: 3
	Licence :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
include_package_data = True